--- a/index.html
+++ b/index.html
@@ -1,45 +1,25 @@
+<!DOCTYPE html>
+
 <html>
 <head>
-<title>Kitten Package Manager</title>
+<title>JavaScript file upload</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<script type="text/javascript">
+var upload = function() {
+    var zip = document.getElementById("photo").file[0];
+    return false;
+};
+</script>
 </head>
 <body>
-<h2>Kitten Package Manager - Upload</h2>
-<input type="file" id="fileUpload" onchange="startRead()" accept=".zip">
-<script type="text/javascript">
-function startRead(evt) {
-    var file = document.getElementById(‘file‘).files[0];
-    if (file) {
-        var text = getAsText(file);
-        alert("Name: " + file.name + "\n" + "Last Modified Date :" + file.lastModifiedDate);
-        (function () {
-var textFile = null,
-  makeTextFile = function (text) {
-    var data = new Blob([text], {type: '.zip'});
 
-    // If we are replacing a previously generated file we need to
-    // manually revoke the object URL to avoid memory leaks.
-    if (textFile !== null) {
-      window.URL.revokeObjectURL(textFile);
-    }
+<form action="/" method="post" onsubmit="return upload();">
+  <fieldset>
+    <legend>Upload photo</legend>
+    <input type="file" name="photo" id="photo" accept=".zip">
+    <input type="submit" value="Upload">
+  </fieldset>
+</form>
 
-    textFile = window.URL.createObjectURL(data);
-
-    return textFile;
-  };
-
-
-  var create = document.getElementById('create'),
-    textbox = document.getElementById('textbox');
-
-  create.addEventListener('click', function () {
-    var link = document.getElementById('downloadlink');
-    link.href = makeTextFile(textbox.value);
-    link.style.display = 'block';
-  }, false);
-})();
-    }
-}
-</script>
-<button onclick="upload()">Upload Package</button>
 </body>
 </html>
